# RAG_Project

./: .dockerignore  .gitignore  README.md  TODO.txt  dockerfile  pyproject.toml  rdme.txt  requirements.txt  user_querys.txt
.github/workflows/: ci.yml
core/src/Query/: retriver.py
core/src/ingestion/: ingestion.py
notebooks/: check_chunk.py  check_vectorestore.py
src/: config.py  infer.py  main.py  rag.py  train.py
src/Query/: rerankers.py  retriever.py  user_input.py
src/core/: config.py  constants.py  exception.py  schema.py
src/ingestion/: chunker.py  cleaner.py  index.py  ingestion.py  ingestion_pipeline.py  loader.py
src/ingestion/loader/: ISO_loader.py  loader.py  registry.py
src/llm/: llm_answer.py  openai.py  phi3.py
src/utils/: small_talk.py
test/: evaluation_results.json  test_dataset.json
tests/: evaluation.py
ui/: streamlit_app.py
vectorstore/: index.faiss  index.pkl
