[project]
name = "rag-atharva"
version = "0.1.0"
description = "RAG system using local embeddings + FAISS"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=2.6.0",
    "sentence_transformers",
    "pymupdf>=1.23.0",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    # LLM providers (keep only if you use them)
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    "unstructured[pdf]>=0.18.24",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
]
